03week/airplane/css/style.css
body {
    font-family: 'Open Sans', sans-serif;
}

header {
    background-color: rgb(18, 58, 84);
    height: 85px;
    border-bottom: white solid 2px;
}

.logo {
    float: left;
    margin-left: 100px;
}

nav {
    float: right;
    margin-right: 200px;
    margin-top: 40px;
}

a:link {
    color: white;
    text-decoration: none;
}

a:visited {
    color: white;
    text-decoration: none;
}

a:active {
    color: rbg(1, 141, 128);
    text-decoration: none;
}

main {
        background-image: url("../img/airline.jpg");
        background-size: cover;
        padding-top: 100px;
        padding-left: 100px;
        height: 1000px;
}

section {
    width: 600px;
    height: 520px;
    background-color: rgb(18, 58, 84);
    border-radius: 4px;
}

.plane {
    background-color: #0063b7;
    border: none;
    float: left;
    display: inline-block;
    width: 200px;
    height: 80px;
    border-radius: 4px;
}

.hotel {
    background-color: #018d80;
    border: none;
    float: left;
    display: inline-block;
    width: 200px;
    height: 80px;
    border-radius: 4px;
}

.car {
    background-color: #018d80;
    border: none;
    float: left;
    display: inline-block;
    width: 200px;
    height: 80px;
    border-radius: 4px;
}

input[type="text"] {
    margin-top: 50px;
    margin-left: 30px;
    margin-right: 20px;
    background-color: rgb(18, 58, 84);
    font-size: 18px;
    color: white;
    padding: 10px;
    border: white 2px solid;
    border-radius: 4px;
    width: 220px;
    height: 40px;
    font-family: 'Open Sans', sans-serif;
}

input[type="date"] {
    margin-top: 50px;
    margin-left: 30px;
    margin-right: 20px;
    background-color: rgb(18, 58, 84);
    font-size: 18px;
    color: white;
    padding: 10px;
    border: white 2px solid;
    border-radius: 4px;
    width: 220px;
    height: 40px;
    font-family: 'Open Sans', sans-serif;
}

div {
    color: white;
    padding: 30px;
    
}

select {
    margin-left: 75px;
    width: 80px;
    background-color: rgb(18, 58, 84);
    font-size: 18px;
    color: white;
    padding: 10px;
    border: white 2px solid;
    border-radius: 4px;
}

input[value="Return"] {
    margin-left: 50px;
}

.submit {
    margin-left: 30px;
    margin-right: 30px;
    background-color: #0063b7;
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 18px;
    width: 540px;
    height: 70px;
    border-radius: 4px;
    font-family: 'Open Sans', sans-serif;
}

